<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.deepnetts</groupId>
    <version>2.0.1</version>
    <artifactId>deepnetts-examples</artifactId>
    <packaging>jar</packaging>
    
    <dependencies>
        <dependency>
            <groupId>org.knowm.xchart</groupId>
            <artifactId>xchart</artifactId>
            <version>3.5.2</version>
            <exclusions>
                <exclusion>
                    <groupId>de.erichseifert.vectorgraphics2d</groupId>
                    <artifactId>VectorGraphics2D</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20190722</version>
        </dependency>
        <dependency>
            <groupId>javax.visrec</groupId>
            <artifactId>visrec-api</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>javax.visrec</groupId>
            <artifactId>visrec-ri</artifactId>
            <version>1.0.1</version>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>com.deepnetts</groupId>
                    <artifactId>deepnetts-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.deepnetts</groupId>
            <artifactId>deepnetts-core-pro</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.deepnetts</groupId>
            <artifactId>deepnetts-license</artifactId>
            <version>1.0</version>
        </dependency>
    </dependencies>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <name>deepnetts-examples</name>
    <description>Run options for optimal inlining

-XX:+UnlockDiagnosticVMOptions
-XX:MaxInlineSize=80        
-XX:+PrintInlining
-XX:+PrintCompilation
        
----------------------------
For JitWatch

-XX:+UnlockDiagnosticVMOptions
-XX:MaxInlineSize=80
-XX:+LogCompilation
-XX:+TraceClassLoading
-XX:+RangeCheckElimination
-XX:+TraceClassLoading


</description>
</project>